@@ -1,6 +1,6 @@
 Package: MALDIquantForeign
-Version: 0.11.4
-Date: 2018-08-01
+Version: 0.11.5
+Date: 2018-08-14
 Title: Import/Export Routines for 'MALDIquant'
 Authors@R: c(person("Sebastian", "Gibb", role=c("aut", "cre"),
         email="mail@sebastiangibb.de",
@@ -22,4 +22,4 @@ URL: http://strimmerlab.org/software/maldiquant/
 BugReports: https://github.com/sgibb/MALDIquantForeign/issues/
 LazyLoad: yes
 VignetteBuilder: knitr
-RoxygenNote: 5.0.1
+RoxygenNote: 6.1.0
