@@ -307,7 +307,7 @@ setMethod(f="exportMsd",
 #' @author Sebastian Gibb
 #' @references \url{http://strimmerlab.org/software/maldiquant/}, \cr
 #' HUPO Proteomics Standards Inititative mzML 1.1.0 Specification:
-#' \url{http://www.psidev.info/mzml_1_0_0}
+#' \url{http://www.psidev.info/mzml}
 #' @examples
 #'
 #' \dontrun{
