@@ -35,9 +35,6 @@ exampleDirectory <- system.file("exampledata", package="MALDIquantForeign")
 s <- importCiphergenXml(exampleDirectory)
 
 }
-\author{
-Sebastian Gibb
-}
 \references{
 \url{http://strimmerlab.org/software/maldiquant/}
 }
@@ -45,4 +42,6 @@ Sebastian Gibb
 \code{\link[MALDIquant]{MassSpectrum-class}},
 \code{\link[MALDIquant]{MassPeaks-class}}
 }
-
+\author{
+Sebastian Gibb
+}
