@@ -1,9 +1,9 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/import-functions.R
 \name{importTxt}
-\alias{importCsv}
-\alias{importTab}
 \alias{importTxt}
+\alias{importTab}
+\alias{importCsv}
 \title{Import text files}
 \usage{
 importTxt(path, ...)
@@ -47,9 +47,6 @@ s <- importTxt(exampleDirectory)
 s <- importCsv(exampleDirectory)
 
 }
-\author{
-Sebastian Gibb
-}
 \references{
 \url{http://strimmerlab.org/software/maldiquant/}
 }
@@ -58,4 +55,6 @@ Sebastian Gibb
 \code{\link[MALDIquant]{MassPeaks-class}},
 \code{\link[utils]{read.table}}
 }
-
+\author{
+Sebastian Gibb
+}
