@@ -1,6 +1,11 @@
 RELEASE HISTORY OF THE "MALDIquantForeign" PACKAGE
 ==================================================
 
+CHANGES in MALDIquantForeign VERSION 0.11.5 [2018-08-14]:
+---------------------------------------------------------
+
+* Fix psidev URLs.
+
 CHANGES in MALDIquantForeign VERSION 0.11.4 [2018-08-01]:
 ---------------------------------------------------------
 
